action alignment resolved

--- a/styles/B8A2GamerZone.css
+++ b/styles/B8A2GamerZone.css
@@ -227,15 +227,19 @@ font-weight: 600;
 }
 
 .action-container{
-    display:grid;
-    grid-template-columns: repeat(5,1fr);
+   /* display:grid;
+    grid-template-columns: repeat(5,1fr);*/
+    display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
     margin: 0 100px;
     margin-top: -120px;
+    
 }
 .action-content{
     display: flex;
     justify-content: center;
-    align-items: center;
+   align-items: center;
     padding: 20px 10px;
 }
 .action-image{
@@ -356,22 +360,32 @@ list-style: none;
         align-items: center;
     }
     .action-container{
-        grid-template-columns: repeat(3,1fr);
-        margin: 0 30px;
+        
+        margin: 0 10px;
         margin-top: -30px ;
     }
     .action-content{
         display: flex;
+        flex: 0 0 calc(33.33% - 20px);
         justify-content: center;
         align-items: center;
-        padding: 30px 10px;
+        
     }
     .action-text{
-        margin-left: 10px;
+        margin-left: 5px;
         color: #0B0223;
         font-size: 8px;
         font-weight: 600;
         }
+        .action-image{
+            width: 25px;
+            height: 25px
+        }
+        .action-content:hover{
+            border-radius: 20px;
+            border:1px solid #F948B2;
+            padding: 5px;
+            }
     .play-container{
         margin: 0 30px;
         justify-content: center;
